feat(api): sessions des relecteurs et droits de l'administrateur
